--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <body>
 
 <div class="header">
-    <h1>智慧衣物更換提醒系統</h1>
+    <h1>衣物更換提醒系統</h1>
 </div>
 
 <div class="page-container">
@@ -219,8 +219,8 @@
         <label><strong>選擇模式:</strong></label>
         <div class="button-group">
             <button id="btn-all" class="active">查看所有人狀態</button>
-            <button id="btn-sweater">毛衣 (提醒)</button>
-            <button id="btn-uniform">制服 (提醒)</button>
+            <button id="btn-sweater">毛衣</button>
+            <button id="btn-uniform">制服</button>
         </div>
         <div id="upload-section">
             <label for="file-input" class="upload-btn">上傳 Excel</label>
@@ -395,7 +395,7 @@
             return;
         }
 
-        rightPanelTitle.textContent = '應更換人員列表 (含已過期)';
+        rightPanelTitle.textContent = '應更換人員列表';
         pieChartTitle.textContent = '提醒狀態分佈';
         barChartTitle.textContent = '提醒狀態統計';
         
