--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>智慧衣物更換提醒系統</title>
+<title>衣物更換提醒系統</title>
 <style>
     body, html {
         margin: 0;
